# sentinelnet

./: .gitignore  Dockerfile  PROPOSAL.md  README.md  pyproject.toml
adversarial/: attacks.py
data/: download_datasets.py
data/artifacts/: feature_manifest.json
docs/: DEPLOYMENT.md  PI5-TRAINING-NOTES.md  exfil-pipeline.md
docs/experiments/: 001-baseline-training.md
docs/journal/: 2026-02-11-evening.md  2026-02-11-night.md  2026-02-11.md  2026-02-12.md  2026-04-12-triage-pipeline.md
exports/: export_onnx.py  validate_onnx.py
feeder/: README.md  feeder.py  sentinelnet-feeder.service
inference/: serve.py  suricata_bridge.py
k8s/sentinel/: sentinelnet-deployment.yaml  sentinelnet-hpa.yaml
models/: label_encoder.pkl  scaler.pkl  sentinel.onnx  sentinel_net.py  tabnet_baseline.py
monitoring/: noc-morning-brief.py  pi2-threshold.config  prometheus_rules.yaml  suricata-notify.py  suricata-review.py
pipeline/: README.md  flow_extractor.py  pipeline.py  sentinelnet-pipeline.service  whitelist.json
preprocessing/: pipeline.py
suricata/: README.md  eve-to-loki.py  eve-to-loki.service  suricata.yaml
tests/: test_attacks.py  test_flow_extractor.py  test_inference.py  test_models.py  test_pipeline.py  test_preprocessing.py
training/: train.py
training/configs/: default.yaml  suricata_reduced.yaml
triage/: README.md
triage/docs/: ARCHITECTURE.md  DEPLOYMENT.md  LESSON_CACHE.md
triage/lib/: fleet_triage_common.py
triage/scripts/: setup-wsl-autoboot.ps1
triage/systemd/: fleet-triage-filter.service  fleet-triage-filter.timer  fleet-triage-summarize.service  fleet-triage-summarize.timer
triage/tests/: test_fleet_triage_common.py
